fixed css layout bugs in product details page, and vertical product view

--- a/css/baseStyle.css
+++ b/css/baseStyle.css
@@ -479,6 +479,7 @@ footer div {
 
 .vertical-product-view img {
     max-height: 150px;
+    max-width: 100%;
 }
 
 /*
